--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
@@ -11,7 +11,12 @@ namespace @Model.NameSpace
         @:/// <summary>
         @:/// @column.ColumnComment
         @:/// </summary>
+if(column.EffectType == "Upload"){
+        @:public string @column.ColumnName { get; set; }
+}else{
         @:public @column.NetType @column.ColumnName { get; set; }
+}
+
         @:
 }
     }
