--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
@@ -1,5 +1,5 @@
-﻿using Magic.Core;
-using System;
+﻿using System;
+using Admin.NET.Core;
 using System.ComponentModel.DataAnnotations;
 
 namespace @Model.NameSpace
@@ -7,7 +7,7 @@ namespace @Model.NameSpace
     /// <summary>
     /// @(@Model.BusName)输入参数
     /// </summary>
-    public class @(@Model.ClassName)Input : PageInputBase
+    public class @(@Model.ClassName)Input : BasePageInput
     {
 @foreach (var column in Model.TableField){
 if (@column.ColumnKey != "True"){
