--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Manage.js.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Manage.js.vm
@@ -1,5 +1,4 @@
 import { defHttp } from '/@@/utils/http/axios';
-import { RestfulResult, PageResult } from '../../model/baseResultModel';
 enum Api {
   Add@(@Model.ClassName) = '/@(@Model.ClassName)/add',
   Delete@(@Model.ClassName) = '/@(@Model.ClassName)/delete',
@@ -7,27 +6,19 @@ enum Api {
   Get@(@Model.ClassName)Page = '/@(@Model.ClassName)/page',
 } 
 
-/**
- * 增加@(@Model.BusName)
- */
+//增加@(@Model.BusName)
 export function add@(@Model.ClassName)(params: any) {
-  return defHttp.post<RestfulResult<any>>({ url: Api.Add@(@Model.ClassName), params });
+  return defHttp.post<any>({ url: Api.Add@(@Model.ClassName), params });
 }
-/**
- * 删除@(@Model.BusName)
- */
+//删除@(@Model.BusName)
 export function delete@(@Model.ClassName)(params: any) {
-  return defHttp.post<RestfulResult<any>>({ url: Api.Delete@(@Model.ClassName), params });
+  return defHttp.post<any>({ url: Api.Delete@(@Model.ClassName), params });
 }
-/**
- * 编辑@(@Model.BusName)
- */
+//编辑@(@Model.BusName)
 export function update@(@Model.ClassName)(params: any) {
-  return defHttp.post<RestfulResult<any>>({ url: Api.Update@(@Model.ClassName), params });
+  return defHttp.post<any>({ url: Api.Update@(@Model.ClassName), params });
 }
-/**
- * 分页查询@(@Model.BusName)
- */
-export function get@(@Model.ClassName)Page(params?: any) {
-  return defHttp.get<RestfulResult<PageResult<any>>>({ url: Api.Get@(@Model.ClassName)Page, params });
+//分页查询@(@Model.BusName)
+export function get@(@Model.ClassName)PageList(params?: any) {
+  return defHttp.get<any>({ url: Api.Get@(@Model.ClassName)Page, params });
 }
