--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
@@ -1,35 +1,35 @@
-﻿using Magic.Core;
-using Furion.DependencyInjection;
+﻿using Furion.DependencyInjection;
 using Furion.DynamicApiController;
 using Mapster;
 using Microsoft.AspNetCore.Mvc;
 using SqlSugar;
 using System.Linq;
 using System.Threading.Tasks;
-using Magic.Application.Entity;
 using Microsoft.AspNetCore.Http;
+using Admin.NET.Core;
+using Admin.NET.Core.Service;
 namespace @Model.NameSpace
 {
     /// <summary>
     /// @(@Model.BusName)服务
     /// </summary>
     [ApiDescriptionSettings(Name = "@Model.ClassName", Order = 100)]
-    public class @(@Model.ClassName)Service : I@(@Model.ClassName)Service, IDynamicApiController, ITransient
+    public class @(@Model.ClassName)Service : IDynamicApiController, ITransient
     {
-        private readonly ISqlSugarRepository<@(@Model.ClassName)> _rep;
+        private readonly SqlSugarRepository<@(@Model.ClassName)> _rep;
 @if(@Model.IsUpload){
-        @:private readonly IHttpContextAccessor _httpContextAccessor;
+        @:private readonly ICommonService _commonService;
 }
 
-        public @(@Model.ClassName)Service(ISqlSugarRepository<@(@Model.ClassName)> rep
+        public @(@Model.ClassName)Service(SqlSugarRepository<@(@Model.ClassName)> rep
 @if(@Model.IsUpload){
-                                          @:,IHttpContextAccessor httpContextAccessor
+                                          @:,ICommonService commonService
 }
         )
         {
             _rep = rep;
 @if(@Model.IsUpload){
-             @:_httpContextAccessor = httpContextAccessor;
+             @:_commonService = commonService;
 }
         }
 
@@ -42,58 +42,57 @@ namespace @Model.NameSpace
         public async Task<dynamic> Page([FromQuery] @(@Model.ClassName)Input input)
         {
 @if(Model.IsJoinTable){
-            @:string host = _httpContextAccessor.HttpContext.Request.Host.Value;
-                        @:var entities = await _rep.Context.Queryable<@(@Model.ClassName),@(@Model.JoinTableStr)>((@(@Model.LowerClassName),@(@Model.LowerJoinTableStr))=>new JoinQueryInfos(
+            @:string host = _commonService.GetHost();
+            @:return await _rep.Context.Queryable<@(@Model.ClassName),@(@Model.JoinTableStr)>((@(@Model.LowerClassName),@(@Model.LowerJoinTableStr))=>new JoinQueryInfos(
 @foreach (var column in Model.JoinTableField){
 if (@column.EffectType == "fk"){
-                                    @:JoinType.Left, @(@Model.LowerClassName).@(@column.ColumnName) == @(@column.TableNickName).Id,
+              @:JoinType.Left, @(@Model.LowerClassName).@(@column.ColumnName) == @(@column.TableNickName).Id
 }else if (@column.EffectType == "Upload")
 {
-                                    @:JoinType.Left, @(@Model.LowerClassName).@(@column.ColumnName) == @(@column.TableNickName).Id,
+              @:JoinType.Left, @(@Model.LowerClassName).@(@column.ColumnName) == @(@column.TableNickName).Id
 }
 }
-                                    @:))
+             @:))
 @foreach (var column in Model.TableField){
 if (@column.QueryWhether == "Y"){
 if (@column.NetType == "string"){
 if (@column.QueryType == "like"){
-                                     @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), @(@Model.LowerClassName) => @(@Model.LowerClassName).@(@column.ColumnName).Contains(input.@(@column.ColumnName).Trim()))
+             @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), @(@Model.LowerClassName) => @(@Model.LowerClassName).@(@column.ColumnName).Contains(input.@(@column.ColumnName).Trim()))
 }else{
-                                     @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), @(@Model.LowerClassName) => @(@Model.LowerClassName).@(@column.ColumnName) @column.QueryType input.@(@column.ColumnName))
+             @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), @(@Model.LowerClassName) => @(@Model.LowerClassName).@(@column.ColumnName) @column.QueryType input.@(@column.ColumnName))
 }
 }
 }
 }
-                                     @:.Select((@(@Model.LowerClassName),@(@Model.LowerJoinTableStr)) => new @(@Model.ClassName)Output
-                                     @:{
+              @:.Select((@(@Model.LowerClassName),@(@Model.LowerJoinTableStr)) => new @(@Model.ClassName)Output
+                @:{
 @foreach (var column in Model.TableField){
 if (@column.EffectType == "Upload"){
-                                        @:@(@column.ColumnName) = "http://" + host + "/" + @(@column.TableNickName).FilePath + "/" + @(@column.TableNickName).FileObjectName,
+                    @:@(@column.ColumnName) = "http://" + host + "/" + @(@column.TableNickName).FilePath + "/" + @(@column.TableNickName).Id+ @(@column.TableNickName).Suffix,
 }else{
 if (@column.ColumnName != "TenantId")
 {
-                                        @:@(@column.ColumnName) = @(@Model.LowerClassName).@(@column.ColumnName),
+                     @:@(@column.ColumnName) = @(@Model.LowerClassName).@(@column.ColumnName),
 }
 }
 }
-                                      @:})  
+                 @:})  
             
 }else{
-                            @:var entities = await _rep.Context.Queryable<@(@Model.ClassName)>()
+                @:var entities = await _rep.Context.Queryable<@(@Model.ClassName)>()
 @foreach (var column in Model.TableField){
 if (@column.QueryWhether == "Y"){
 if (@column.NetType == "string"){
 if(@column.QueryType == "like"){
-                                     @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), u => u.@(@column.ColumnName).Contains(input.@(@column.ColumnName).Trim()))
+                @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), u => u.@(@column.ColumnName).Contains(input.@(@column.ColumnName).Trim()))
 }else{
-                                     @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), u => u.@(@column.ColumnName) @column.QueryType input.@(@column.ColumnName))
+                @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), u => u.@(@column.ColumnName) @column.QueryType input.@(@column.ColumnName))
 }
 }
 }
 }          
 }
-                                     .ToPagedListAsync(input.PageNo, input.PageSize);
-            return XnPageResult<@(@Model.ClassName)Output>.SqlSugarPageResult(entities);
+                .ToPagedListAsync(input.Page, input.PageSize);
         }
 
         /// <summary>
@@ -105,7 +104,7 @@ if(@column.QueryType == "like"){
         public async Task Add(Add@(@Model.ClassName)Input input)
         {
             var entity = input.Adapt<@(@Model.ClassName)>();
-            await _rep.Context.Insertable(entity).CallEntityMethod(m => m.Create()).ExecuteCommandAsync();
+            await _rep.InsertAsync(entity);
         }
 
         /// <summary>
@@ -118,7 +117,7 @@ if(@column.QueryType == "like"){
         {
 @foreach (var column in Model.TableField){
 if (@column.ColumnKey == "True"){
-            @:var entity = await _rep.FirstOrDefaultAsync(u => u.@(@column.ColumnName) == input.@(@column.ColumnName));
+            @:var entity = await _rep.GetFirstAsync(u => u.@(@column.ColumnName) == input.@(@column.ColumnName));
 }
 }
             await _rep.DeleteAsync(entity);
@@ -133,7 +132,7 @@ if (@column.ColumnKey == "True"){
         public async Task Update(Update@(@Model.ClassName)Input input)
         {
             var entity = input.Adapt<@(@Model.ClassName)>();
-            await _rep.Context.Updateable(entity).IgnoreColumns(ignoreAllNullColumns: true).CallEntityMethod(m => m.Modify()).ExecuteCommandAsync();
+            await _rep.Context.Updateable(entity).IgnoreColumns(ignoreAllNullColumns: true).ExecuteCommandAsync();
         }
 
         /// <summary>
@@ -146,7 +145,7 @@ if (@column.ColumnKey == "True"){
         {
 @foreach (var column in Model.TableField){
 if (@column.ColumnKey == "True"){
-            @:return await _rep.FirstOrDefaultAsync(u => u.@(@column.ColumnName) == input.@(@column.ColumnName));
+            @:return await _rep.GetFirstAsync(u => u.@(@column.ColumnName) == input.@(@column.ColumnName));
 }   
 }            
         }
@@ -159,7 +158,7 @@ if (@column.ColumnKey == "True"){
         [HttpGet("/@Model.ClassName/list")]
         public async Task<dynamic> List([FromQuery] @(@Model.ClassName)Input input)
         {
-            return await _rep.ToListAsync();
+            return await _rep.AsQueryable().ToListAsync();
         }
 
     }
