--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
@@ -17,20 +17,9 @@ namespace @Model.NameSpace
     public class @(@Model.ClassName)Service : IDynamicApiController, ITransient
     {
         private readonly SqlSugarRepository<@(@Model.ClassName)> _rep;
-@if(@Model.IsUpload){
-        @:private readonly ICommonService _commonService;
-}
-
-        public @(@Model.ClassName)Service(SqlSugarRepository<@(@Model.ClassName)> rep
-@if(@Model.IsUpload){
-                                          @:,ICommonService commonService
-}
-        )
+        public @(@Model.ClassName)Service(SqlSugarRepository<@(@Model.ClassName)> rep)
         {
             _rep = rep;
-@if(@Model.IsUpload){
-             @:_commonService = commonService;
-}
         }
 
         /// <summary>
@@ -41,45 +30,14 @@ namespace @Model.NameSpace
         [HttpGet("/@Model.ClassName/page")]
         public async Task<dynamic> Page([FromQuery] @(@Model.ClassName)Input input)
         {
+            return await _rep.Context.Queryable<@(@Model.ClassName)>()
 @if(Model.IsJoinTable){
-            @:string host = _commonService.GetHost();
-            @:return await _rep.Context.Queryable<@(@Model.ClassName),@(@Model.JoinTableStr)>((@(@Model.LowerClassName),@(@Model.LowerJoinTableStr))=>new JoinQueryInfos(
-@foreach (var column in Model.JoinTableField){
-if (@column.EffectType == "fk"){
-              @:JoinType.Left, @(@Model.LowerClassName).@(@column.ColumnName) == @(@column.TableNickName).Id
-}else if (@column.EffectType == "Upload")
-{
-              @:JoinType.Left, @(@Model.LowerClassName).@(@column.ColumnName) == @(@column.TableNickName).Id
-}
-}
-             @:))
+                        @:.Select(u=> new @(@Model.ClassName)Output{
 @foreach (var column in Model.TableField){
-if (@column.QueryWhether == "Y"){
-if (@column.NetType == "string"){
-if (@column.QueryType == "like"){
-             @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), @(@Model.LowerClassName) => @(@Model.LowerClassName).@(@column.ColumnName).Contains(input.@(@column.ColumnName).Trim()))
-}else{
-             @:.WhereIF(!string.IsNullOrWhiteSpace(input.@column.ColumnName), @(@Model.LowerClassName) => @(@Model.LowerClassName).@(@column.ColumnName) @column.QueryType input.@(@column.ColumnName))
+                            @:@(@column.ColumnName) = u.@(@column.ColumnName),        
 }
+                        @:})
 }
-}
-}
-              @:.Select((@(@Model.LowerClassName),@(@Model.LowerJoinTableStr)) => new @(@Model.ClassName)Output
-                @:{
-@foreach (var column in Model.TableField){
-if (@column.EffectType == "Upload"){
-                    @:@(@column.ColumnName) = "http://" + host + "/" + @(@column.TableNickName).FilePath + "/" + @(@column.TableNickName).Id+ @(@column.TableNickName).Suffix,
-}else{
-if (@column.ColumnName != "TenantId")
-{
-                     @:@(@column.ColumnName) = @(@Model.LowerClassName).@(@column.ColumnName),
-}
-}
-}
-                 @:})  
-            
-}else{
-                @:var entities = await _rep.Context.Queryable<@(@Model.ClassName)>()
 @foreach (var column in Model.TableField){
 if (@column.QueryWhether == "Y"){
 if (@column.NetType == "string"){
@@ -91,7 +49,6 @@ if(@column.QueryType == "like"){
 }
 }
 }          
-}
                 .ToPagedListAsync(input.Page, input.PageSize);
         }
 
