--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
@@ -1,4 +1,6 @@
-﻿using System;
+﻿using SqlSugar;
+using Admin.NET.Core;
+using Admin.NET.Core.Service;
 
 namespace @Model.NameSpace
 {
@@ -8,31 +10,31 @@ namespace @Model.NameSpace
     public class @(@Model.ClassName)Output
     {
 @foreach (var column in Model.TableField){
-        @:/// <summary>
-        @:/// @column.ColumnComment
-        @:/// </summary>
+       @:/// <summary>
+       @:/// @column.ColumnComment
+       @:/// </summary>
 if(column.EffectType == "fk")
 {
-         @:public @column.NetType @column.ColumnName { get; set; }
-         
-         @:public @(@column.ColumnName)Fk@(@column.FkEntityName)Output Fk@(@column.ColumnName) { get; set; }
-}else{
-        @:public @column.NetType @column.ColumnName { get; set; }
-}
-        @:
-}
-    }
-@foreach (var column in Model.TableField){
-if (@column.EffectType == "fk"){
-    @:public class @(@column.ColumnName)Fk@(@column.FkEntityName)Output
-}
-}
-    {
-@foreach (var column in Model.TableField){
-if (@column.EffectType == "fk"){
-        @:public @column.FkColumnNetType @column.FkColumnName { get; set; }
-}
-}
-    }
+       @:public @column.NetType @column.ColumnName { get; set; }
 
+       @:public @(@column.ColumnName)Fk@(@column.FkEntityName)Output Fk@(@column.ColumnName) { get; set; }
+}else if(column.EffectType == "Upload"){
+        @:public @column.NetType @column.ColumnName { get; set; }
+        @:public MapperSysFileOutput @(@column.ColumnName)Attachment { get; set; }
+}else{
+       @:public @column.NetType @column.ColumnName { get; set; }
+}
+    @:
+}
+    }
+@foreach (var column in Model.TableField){
+if (@column.EffectType == "fk"){
+    @:[SugarTable("@(@column.FkTableName)")]
+    @:[NotTable]
+    @:public class @(@column.ColumnName)Fk@(@column.FkEntityName)Output: EntityBaseId
+    @:{
+        @:public @column.FkColumnNetType @column.FkColumnName { get; set; }
+    @:}
+}
+}
 }
