--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/data.data.ts.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/data.data.ts.vm
@@ -1,7 +1,12 @@
+import { h } from 'vue';
 import { BasicColumn, FormSchema } from '/@@/components/Table';
 @foreach (var column in Model.TableField){
 if(@column.EffectType == "Upload"){
 @:import { uploadFile } from '/@@/api/sys/admin';
+}else if(@column.EffectType == "fk"){
+@:import { get@(@column.FkEntityName)Dropdown } from '/@@/api/main/@(@Model.ClassName)';
+}else if(@column.EffectType == "Switch"){
+@:import { Switch } from 'ant-design-vue';
 }
 }
 export const columns: BasicColumn[] = [
@@ -10,6 +15,17 @@ export const columns: BasicColumn[] = [
   @:{
     @:title: '@column.ColumnComment',
     @:dataIndex: '@column.LowerColumnName',
+if(@column.EffectType == "Upload"){
+    @:slots: { customRender: '@(@column.LowerColumnName)' },
+}else if(@column.EffectType == "fk"){
+    @:customRender: ({ record }) => {
+      @:return record.fk@(@column.ColumnName).@(@column.LowerFkColumnName);
+    @:},
+}else if(@column.EffectType == "Switch"){
+    @:customRender: ({ record }) => {
+      @:return h(@(@column.EffectType), { checked: record.@(@column.LowerColumnName) });
+    @:},
+}
   @:},
     }
 
@@ -17,15 +33,26 @@ export const columns: BasicColumn[] = [
 ];
 
 export const searchFormSchema: FormSchema[] = [
-  @foreach (var column in Model.QueryWhetherList){  
+@foreach (var column in Model.QueryWhetherList){  
   @:{
+if(@column.EffectType == "fk"){
+    @:field: '@column.LowerColumnName',
+    @:label: '@column.ColumnComment',
+    @:component: 'ApiSelect',
+    @:colProps: { span: 8 },
+    @:componentProps: {
+      @:api: get@(@column.FkEntityName)Dropdown,
+      @:labelField: 'label',
+      @:valueField: 'value',
+    @:},
+}else{
     @:label: '@column.ColumnComment',
     @:field: '@column.LowerColumnName',
     @:component: 'Input',
     @:colProps: { span: 8 },
+}
   @:},
-    
-  }
+}
 ];
 
 export const formSchema: FormSchema[] = [
@@ -33,7 +60,16 @@ export const formSchema: FormSchema[] = [
   @:{
     @:label: '@column.ColumnComment',
     @:field: '@column.LowerColumnName',
+if(@column.EffectType == "fk"){
+    @:component: 'ApiSelect',
+    @:componentProps: {
+      @:api: get@(@column.FkEntityName)Dropdown,
+      @:labelField: 'label',
+      @:valueField: 'value',
+    @:},
+}else{
     @:component: '@column.EffectType',
+}
     if(@column.WhetherTable == "Y"){
     @:required: true,
     }else{
