--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/dataModal.vue.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/dataModal.vue.vm
@@ -22,7 +22,7 @@
         actionColOptions: {
           span: 23,
         },
-        });
+      });
       const [registerModal, { setModalProps, closeModal }] = useModalInner(async (data) => {
         resetFields();
         setModalProps({ confirmLoading: false });
@@ -31,12 +31,28 @@
           setFieldsValue({
             ...data.record,
           });
+@foreach (var column in Model.TableField){
+if(@column.EffectType == "Upload"){
+          @:if (data.record.@(@column.LowerColumnName)) {
+            @:setFieldsValue({
+              @:@(@column.LowerColumnName): [data.record.@(@column.LowerColumnName)Attachment],
+            @:});
+          @:}
+}
+}
         }
       });
       const getTitle = computed(() => (!unref(isUpdate) ? '新增@(@Model.BusName)' : '编辑@(@Model.BusName)'));
       async function handleSubmit() {
-        try { 
-          const values = await validate();
+        try {
+          var values = await validate();
+@foreach (var column in Model.TableField){
+if(@column.EffectType == "Upload"){
+          @:if (values.@(@column.LowerColumnName)) {
+            @:values = { ...values, @(@column.LowerColumnName): values.@(@column.LowerColumnName)[0].id };
+          @:}
+}
+}
           setModalProps({ confirmLoading: true });
           if (!unref(isUpdate)) {
             await add@(@Model.ClassName)(values);
@@ -45,12 +61,11 @@
           }
           closeModal();
           emit('success');
-          } finally {
-            setModalProps({ confirmLoading: false });
-          }
+        } finally {
+          setModalProps({ confirmLoading: false });
         }
+      }
       return { registerModal, registerForm, getTitle, handleSubmit };
-      },
+    },
   });
 </script>
-
