--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
@@ -4,18 +4,31 @@
       <template #toolbar>
         <a-button type="primary" @@click="handleCreate">新增@(@Model.BusName)</a-button>
       </template>
+@foreach (var column in Model.TableField){
+if(@column.EffectType == "Upload"){
+      @:<template #@(@column.LowerColumnName)="{ text, record }">
+        <TableImg
+          v-if="text"
+          :size="60"
+          :simpleShow="true"
+          :showBadge="false"
+          :imgList="[downUrl + '/' + record.@(@column.LowerColumnName)Attachment.id + record.@(@column.LowerColumnName)Attachment.suffix]"
+        />
+      </template>
+}
+}
       <template #action="{ record }">
         <TableAction
           :actions="[
             {
               icon: 'clarity:note-edit-line',
-              tooltip: '编辑',
+              label: '编辑',
               onClick: handleEdit.bind(null, record),
             },
             {
               icon: 'ant-design:delete-outlined',
               color: 'error',
-              tooltip: '删除',
+              label: '删除',
               popConfirm: {
                 title: '是否确认删除',
                 confirm: handleDelete.bind(null, record),
@@ -23,14 +36,18 @@
             },
           ]"
         />
-      </template> 
+      </template>
     </BasicTable>
     <@(@Model.ClassName)Modal @@register="registerModal" @@success="handleSuccess" />
   </div>
 </template>
 <script lang="ts">
   import { defineComponent } from 'vue';
-  import { BasicTable, useTable, TableAction } from '/@@/components/Table';
+  @if(Model.IsUpload){
+  @:import { BasicTable, useTable, TableAction, TableImg } from '/@@/components/Table';
+  }else{
+  @:import { BasicTable, useTable, TableAction } from '/@@/components/Table';
+  }
   import { useModal } from '/@@/components/Modal';
   import @(@Model.ClassName)Modal from './dataModal.vue';
 
@@ -39,7 +56,11 @@
   import { get@(@Model.ClassName)PageList, delete@(@Model.ClassName) } from '/@@/api/main/@(@Model.ClassName)';
   let searchvalue = undefined;
   export default defineComponent({
-    components: { BasicTable, @(@Model.ClassName)Modal, TableAction },
+  @if(Model.IsUpload){
+    @:components: { BasicTable, @(@Model.ClassName)Modal, TableAction, TableImg },
+  }else{
+     @:components:{ BasicTable, @(@Model.ClassName)Modal, TableAction },
+  }
     setup() {
       const { createMessage } = useMessage();
       const [registerModal, { openModal }] = useModal();
@@ -63,7 +84,7 @@
         bordered: true,
         canResize: true,
         actionColumn: {
-          width: 120,
+          width: 150,
           title: '操作',
           dataIndex: 'action',
           slots: { customRender: 'action' },
@@ -94,7 +115,7 @@
       }
       function handleSuccess() {
         reload();
-      } 
+      }
       return {
         registerTable,
         registerModal,
@@ -102,8 +123,10 @@
         handleEdit,
         handleDelete,
         handleSuccess,
+@if(@Model.IsUpload){
+        @:downUrl: import.meta.env.VITE_GLOB_DOWNLOAD_URL,
+}
       };
     },
   });
 </script>
-
