--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Output.cs.vm
@@ -1,6 +1,7 @@
 ﻿using SqlSugar;
 using Admin.NET.Core;
 using Admin.NET.Core.Service;
+using System.Collections.Generic;
 
 namespace @Model.NameSpace
 {
@@ -21,9 +22,6 @@ if(column.EffectType == "fk")
 }else if(column.EffectType == "Upload"){
         @:public @column.NetType @column.ColumnName { get; set; }
         @:public MapperSysFileOutput @(@column.ColumnName)Attachment { get; set; }
-}else if(column.EffectType == "TreeSelect"){
-         @:public @column.NetType @column.ColumnName { get; set; }
-         @:public List<@(@Model.ClassName)Output> Children { get; set; }
 }else{
        @:public @column.NetType @column.ColumnName { get; set; }
 }
@@ -40,4 +38,24 @@ if (@column.EffectType == "fk"){
     @:}
 }
 }
+
+@foreach (var column in Model.TableField){
+if (@column.EffectType == "ApiTreeSelect"){
+    @:[SugarTable("@(@column.FkTableName)")]
+    @:[NotTable]
+    @:public class @(@column.FkEntityName)TreeOutput: EntityBaseId
+    @:{
+        @:[SugarColumn(ColumnName = "@(@column.DisplayColumn)")]
+        @:public @(@Model.GetColumnNetType(@column.DisplayColumn)) Label { get; set; }
+
+        @:[SugarColumn(ColumnName = "@(@column.ValueColumn)", IsPrimaryKey = true, IsIdentity = false)]
+        @:public @(@Model.GetColumnNetType(@column.ValueColumn))  Value { get; set; }
+
+        @:public @(@Model.GetColumnNetType(@column.PidColumn)) @column.PidColumn { get; set; }
+        @:[SugarColumn(IsIgnore = true)]
+        @:public List<@(@column.FkEntityName)TreeOutput> Children { get; set; }
+    @:}
+}
+}
+
 }
