--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/index.vue.vm
@@ -2,13 +2,13 @@
   <div>
     <BasicTable @@register="registerTable">
       <template #toolbar>
-        <a-button type="primary" @@click="handleCreate">新增@(@Model.BusName)</a-button>
+        <a-button type="primary" @@click="handleCreate" :disabled="!hasPermission('@(@Model.ClassName):add')">新增@(@Model.BusName)</a-button>
       </template>
 @foreach (var column in Model.TableField){
 if(@column.EffectType == "Upload"){
       @:<template #@(@column.LowerColumnName)="{ text, record }">
         <TableImg
-          v-if="text"
+          v-if="record.@(@column.LowerColumnName)Attachment"
           :size="60"
           :simpleShow="true"
           :showBadge="false"
@@ -24,11 +24,13 @@ if(@column.EffectType == "Upload"){
               icon: 'clarity:note-edit-line',
               label: '编辑',
               onClick: handleEdit.bind(null, record),
+              disabled: !hasPermission('@(@Model.ClassName):update'),
             },
             {
               icon: 'ant-design:delete-outlined',
               color: 'error',
               label: '删除',
+              ifShow: hasPermission('@(@Model.ClassName):delete'),
               popConfirm: {
                 title: '是否确认删除',
                 confirm: handleDelete.bind(null, record),
@@ -43,6 +45,7 @@ if(@column.EffectType == "Upload"){
 </template>
 <script lang="ts">
   import { defineComponent } from 'vue';
+  import { usePermission } from '/@@/hooks/web/usePermission';
   @if(Model.IsUpload){
   @:import { BasicTable, useTable, TableAction, TableImg } from '/@@/components/Table';
   }else{
@@ -54,7 +57,6 @@ if(@column.EffectType == "Upload"){
   import { columns, searchFormSchema } from './data.data';
   import { useMessage } from '/@@/hooks/web/useMessage';
   import { get@(@Model.ClassName)PageList, delete@(@Model.ClassName) } from '/@@/api/main/@(@Model.ClassName)';
-  let searchvalue = undefined;
   export default defineComponent({
   @if(Model.IsUpload){
     @:components: { BasicTable, @(@Model.ClassName)Modal, TableAction, TableImg },
@@ -62,16 +64,13 @@ if(@column.EffectType == "Upload"){
      @:components:{ BasicTable, @(@Model.ClassName)Modal, TableAction },
   }
     setup() {
+      const { hasPermission } = usePermission();
       const { createMessage } = useMessage();
       const [registerModal, { openModal }] = useModal();
       const [registerTable, { reload }] = useTable({
         title: '@(@Model.BusName)列表',
         api: get@(@Model.ClassName)PageList,
         pagination: true,
-        beforeFetch(params) {
-          params.searchvalue = searchvalue;
-          return params;
-        },
         rowKey: 'id',
         columns,
         formConfig: {
@@ -88,10 +87,6 @@ if(@column.EffectType == "Upload"){
           title: '操作',
           dataIndex: 'action',
           slots: { customRender: 'action' },
-        },
-        handleSearchInfoFn(info) {
-          searchvalue = info.searchvalue;
-          return info;
         },
       });
 
@@ -117,6 +112,7 @@ if(@column.EffectType == "Upload"){
         reload();
       }
       return {
+        hasPermission,
         registerTable,
         registerModal,
         handleCreate,
