--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Service.cs.vm
@@ -8,6 +8,8 @@ using System.Threading.Tasks;
 using Microsoft.AspNetCore.Http;
 using Admin.NET.Core;
 using Admin.NET.Core.Service;
+using System;
+
 namespace @Model.NameSpace
 {
     /// <summary>
