--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/data.data.ts.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/data.data.ts.vm
@@ -64,9 +64,17 @@ if(@column.EffectType == "fk"){
     @:componentProps: {
       @:api: get@(@column.FkEntityName)Tree,
     @:},
-}else{
+}
+else if(@column.NetType == "DateTime" && @column.QueryType == "~"){
+    @:component: 'RangePicker',
+    @:componentProps: {
+    @:  valueFormat:"YYYY-MM-DD"
+    @:},
+}
+else{
     @:component: 'Input',
 }
+
   @:},
 }
 ];
