--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
@@ -1,6 +1,7 @@
 ﻿using System;
 using Admin.NET.Core;
 using System.ComponentModel.DataAnnotations;
+using System.Collections.Generic;
 
 namespace @Model.NameSpace
 {
@@ -11,11 +12,21 @@ namespace @Model.NameSpace
     {
 @foreach (var column in Model.TableField){
 if (@column.ColumnKey != "True"){
+
         @:/// <summary>
         @:/// @column.ColumnComment
         @:/// </summary>
         @:public virtual @column.NetType @column.ColumnName { get; set; }
         @:
+
+if(@column.NetType == "DateTime"  && @column.QueryType == "~"){
+   
+       @:/// <summary>
+       @: /// @(@column.ColumnComment)范围
+       @: /// </summary>
+       @: public List<DateTime?> @(@column.ColumnName)Range { get; set; } 
+
+}
 }
 }
     }
