--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Entity.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Entity.cs.vm
@@ -2,7 +2,7 @@
 using SqlSugar;
 using System.ComponentModel;
 using Admin.NET.Core;
-namespace Admin.NET.Application
+namespace Admin.NET.Application.Entity
 {
      /// <summary>
      /// @(@Model.Description)
