深度拷贝 移除VUE的监听，防止INDEX页面值变动 修改页面的数据是通过index页面直接传过来的，如果在编辑页面直接修改这个对象的值（触发例子：修改页面修改数据后点击提交，后台提示错误后，list上的数据会改变，实际应该不改变），index页面列表也会跟着改变。

--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/editForm.vue.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/editForm.vue.vm
@@ -198,7 +198,8 @@ if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnN
       // 初始化方法
       edit (record) {
         this.visible = true
-        this.record = record
+        //深度拷贝 移除VUE的监听，防止INDEX页面值变动
+        this.record = JSON.parse(JSON.stringify(record))
 @foreach (var column in Model.TableField){
 if (@column.DictTypeCode != ""){
 if (@column.EffectType == "select" || @column.EffectType == "radio" || @column.EffectType == "checkbox"){
