--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/IService.cs.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/IService.cs.vm
@@ -11,7 +11,7 @@ namespace @Model.NameSpace
         Task Delete(Delete@(@Model.ClassName)Input input);
         Task<@(@Model.ClassName)Output> Get([FromQuery] Querye@(@Model.ClassName)Input input);
         Task<List<@(@Model.ClassName)Output>> List([FromQuery] @(@Model.ClassName)Input input);
-        Task<PageResult<@(@Model.ClassName)Output>> Page([FromQuery] @(@Model.ClassName)Input input);
+        Task<PageResult<@(@Model.ClassName)Output>> Page([FromQuery] @(@Model.ClassName)Search input);
         Task Update(Update@(@Model.ClassName)Input input);
 @foreach (var column in Model.TableField){
 if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnName != ""){
