--- a/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
+++ b/Admin.NET/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
@@ -45,7 +45,7 @@ if (@column.WhetherRequired == "Y"){
 }
     }
 
-    public class Delete@(@Model.ClassName)Input
+    public class Delete@(@Model.ClassName)Input : BaseIdInput
     {
 @foreach (var column in Model.TableField){
 if (@column.ColumnKey == "True"){
