--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/Input.cs.vm
@@ -1,5 +1,4 @@
-using Furion.Extras.Admin.NET;
-using Furion.Extras.Admin.NET.Service;
+using Admin.NET.Core;
 using System;
 using System.ComponentModel.DataAnnotations;
 
