--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/Entity.cs.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/Entity.cs.vm
@@ -1,7 +1,7 @@
 ﻿using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 using Furion.DatabaseAccessor;
-using Furion.Extras.Admin.NET;
+using Admin.NET.Core;
 using Microsoft.EntityFrameworkCore;
 
 namespace @(@Model.NameSpace).Entity
