--- a/backend/Admin.NET.Web.Entry/wwwroot/Template/editForm.vue.vm
+++ b/backend/Admin.NET.Web.Entry/wwwroot/Template/editForm.vue.vm
@@ -118,7 +118,7 @@ if (@column.WhetherRequired == "Y"){
 }
       </a-form>
 }else{
-      <k-form-build ref="kfb" :value="formDesign" />
+      <k-form-build ref="kfb" :value="formDesign" :dynamicData="dynamicData" />
 }
     </a-spin>
   </a-modal>
@@ -154,6 +154,7 @@ if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnN
   } from '@@/api/modular/main/@(@Model.ClassName)Manage'
 @if(@Model.LowCodeId != null){
   @:import 'k-form-design/styles/k-form-design.less'
+  @:import { sysDictDataListbycode } from '@@/api/modular/system/dictDataManage'
 }
   export default {
     data () {
@@ -189,6 +190,7 @@ if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnN
 @if(@Model.LowCodeId == null){
         @:form: this.$form.createForm(this)
 }else{
+        @:dynamicData: @Model.DynamicData,
         @:formDesign: @Model.FormDesign
 }
       }
@@ -209,6 +211,11 @@ if(@column.EffectType == "fk" && @column.FkEntityName != "" && @column.FkColumnN
       // 初始化方法
       edit (record) {
         this.visible = true
+        this.$nextTick(() => {
+@foreach (var dynamic in Model.DynamicLoad_Dict){
+          @:sysDictDataListbycode({code:"@(dynamic.Dynamic)"}).then((data) => { this.dynamicData.@(dynamic.DynamicKey) = data.data });
+}
+        });
         //深度拷贝 移除VUE的监听，防止INDEX页面值变动
         this.record = JSON.parse(JSON.stringify(record))
 @foreach (var column in Model.TableField){
